<resources>
    <string name="app_name">CoronaSurveys</string>
    <string name="about_project_text">The world is suffering from a pandemic called COVID-19, caused by the SARS-CoV-2 virus. When testing availability and other resources are limited, national and local governments can encounter problems evaluating the reach and evolution of the epidemic. Hence, any means to evaluate the evolution of the pandemic and its impact with reasonable level of accuracy is useful.\nThe objective of this study is the collection and publication of data concerning the COVID-19 pandemic in different countries. This data is useful to estimate multiple parameters of the pandemic and their evolution in a simple, cheap, and homogeneous way across countries, in combination with other data sources. These numbers are, for instance, the number of infected persons with the COVID-19 virus, the number of fatalities, the number of people vaccinated, etc. They are estimated at a given point in time in each country, and their evolution over time, using techniques like the Network Scale-up Method.</string>
    <string name="about_project_title">About the project</string>
    <string name="add_reminder_text">Add a reminder so it is easier for you to fill in the survey regularly and make a better contribution to the project.</string>
    <string name="add_reminder_title">Add reminder</string>
    <string name="all_collected_data">All collected data</string>
    <string name="cancel">Cancel</string>
    <string name="coronasurveys">CoronaSurveys</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="email_us">Email</string>
    <string name="enable_notifications_alert_text">Enable notifications to schedule reminders</string>
    <string name="enable_notifications_alert_title">Notifications not enabled</string>
    <string name="fill_survey">Fill the survey</string>
    <string name="follow_us_text">You can also follow us on social networks and share our work:</string>
    <string name="follow_us_title">Follow us!</string>
    <string name="gmail_app">Gmail</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="how_help_body">Please complete our short surveys! Choose a country in which you have contacts, and answer questions about how  the pandemic is affecting those you know. No personal information is collected nor stored in these surveys. Because each of us can provide information about the situation among our direct contacts, in aggregate we are able to get rough estimates of total cases, new cases, fatalities, vaccination levels, etc.\nBecause we are tracking the evolution of this epidemic over time, once you have completed the survey, please remember to come back and update the survey at least once a week, or when the responses change.\nFinally, you can help us by asking your friends, colleagues and relatives to complete the survey as well! Thank you!</string>
    <string name="how_help_title">How can I help?</string>
    <string name="how_it_works_body">Using the number of survey responses you and other participants provide, our methods are able to estimate the incidence and evolution of the pandemic.</string>
    <string name="how_it_works_title">How does it work?</string>
    <string name="mail_app">Mail</string>
    <string name="no_mail_apps_available">No mail apps available</string>
    <string name="no_thanks">No, thanks</string>
    <string name="outlook_app">Outlook</string>
    <string name="percentage_population_symptoms">Estimates of active cases</string>
    <string name="project_summary_text">The CoronaSurveys project is a collaborative endeavour between several universities, research institutions and independent volunteers. Data about the COVID-19 pandemic has been collected since March 2020 via anonymous open surveys (all the data collected is openly available). This data allows the production of estimates on the incidence and evolution of COVID-19 using the Network Scale-up Method.\n</string>
    <string name="project_summary_title">The CoronaSurveys Project</string>
    <string name="reminder_disabled">Reminder disabled</string>
    <string name="reminder_enabled">Reminder enabled</string>
    <string name="reminder_notification_body">Fill the anonymous survey for a country</string>
    <string name="reminder_notification_title">Contribute</string>
    <string name="select_country">Select country</string>
    <string name="select_mail_app">Select mail app</string>
    <string name="select_your_country_and_start">Contribute and fill the anonymous survey for a country:</string>
    <string name="send_mail_subject">I would like to have more information about the project</string>
    <string name="settings">Settings</string>
    <string name="survey">Survey</string>
    <string name="team">Team</string>
    <string name="weekly_reminder">Weekly reminder</string>
    <string name="why_important_body">This is an indirect and very cost-effective method that can act as a supplementary tool for health care providers and governments planning and implementing pandemic response.</string>
    <string name="why_important_title">Why is it important to participate?</string>
</resources>