<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fill_survey_block"
        tools:context="org.coronasurveys.mobile.presentation.main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/title2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/project_summary_title"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/presentation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/project_summary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/team_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/team"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/presentation" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/data_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/all_collected_data"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/team_button" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/about_project_title"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/data_button" />

            <TextView
                android:id="@+id/main_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/about_project_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/plot_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/percentage_population_symptoms"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_text" />

            <WebView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plot_title" />

            <TextView
                android:id="@+id/follow_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/follow_us_title"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plot" />

            <TextView
                android:id="@+id/can_follow_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/follow_us_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/follow_us" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/f_logo_rgb_blue_144"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toStartOf="@id/twitter"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/can_follow_us" />

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/twitter_logo_blue"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toStartOf="@id/instagram"
                app:layout_constraintStart_toEndOf="@id/facebook"
                app:layout_constraintTop_toTopOf="@id/facebook" />

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/glyph_logo_may2016"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/twitter"
                app:layout_constraintTop_toTopOf="@id/facebook" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/email_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/email_us"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/can_follow_us"
                app:layout_constraintStart_toStartOf="@id/can_follow_us"
                app:layout_constraintTop_toBottomOf="@id/facebook" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/fill_survey_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="8dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/survey_block_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_country_and_start"
            android:textSize="11sp" />

        <org.coronasurveys.mobile.presentation.views.CountryView
            android:id="@+id/country_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:layout_height="60dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fill_survey_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fill_survey" />

    </LinearLayout>

</RelativeLayout>

